@@ -1,7 +1,11 @@
-#! /bin/bash
+#! /bin/sh
 
 command="bpel2owfn --input=$testdir/consistency/coffee.bpel --input=$testdir/consistency/customer1.bpel --mode=choreography --format=lola --parameter=communicationonly --parameter=reduce --output=coffee_customer1"
 echo ""
 echo "test: user-defined choreography, customer 1"
 echo "      $command"
 $command &> /dev/null
+
+if [ $? -eq 0 ]
+	then rm $builddir/coffee_customer1.lola $builddir/coffee_customer1.task
+fi
