@@ -1,7 +1,11 @@
-#! /bin/bash
+#! /bin/sh
 
 command="bpel2owfn --input=$testdir/testfiles/purchaseOrderProcess.bpel --mode=petrinet --format=tpn --output=purchaseOrderProcess"
 echo ""
-echo "test: Petri net file output: TPN format"
+echo "test: Petri net file output: tpn format"
 echo "      $command"
 $command &> /dev/null
+
+if [ $? -eq 0 ]
+	then rm $builddir/purchaseOrderProcess.tpn
+fi
